force-app/main/default/objects/Matching_Lead_Criteria__mdt/Matching_Lead_Criteria__mdt.object-meta.xml
<CustomObject>
    <description>Matching Lead Criteria</description>
    <label>Matching Lead Criteria</label>
    <pluralLabel>Matching Lead Criteria</pluralLabel>
</CustomObject>