force-app/main/default/objects/Matching_Lead_Criteria__mdt/fields/Is_Email__c.field-meta.xml
<CustomField>
    <fullName>Is_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Email</description>
    <label>Is Email</label>
    <type>Checkbox</type>
</CustomField>