force-app/main/default/objects/Matching_Lead_Criteria__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
                <default>true</default>
                <label>AND</label>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>END</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>