force-app/main/default/objects/Matching_Lead_Criteria__mdt/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <inlineHelpText>Order No.</inlineHelpText>
    <label>Order No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>